[package]
name = "babble-bridge"
version = "0.1.2"
edition = "2021"
description = "simulation harness and CLI for BabbleSim/Zephyr RF simulation workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tyler-potyondy/babble-bridge"
exclude = ["external/", "target/", "tests/sockets/"]

[features]
# Forward all BabbleSim process output to stderr during tests.
# Usage: cargo test --features sim-log
sim-log = []

[lib]
name = "babble_bridge"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"
