[package]
name = "babble-bridge"
version = "0.1.3"
edition = "2021"
description = "simulation harness and CLI for BabbleSim/Zephyr RF simulation workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tyler-potyondy/babble-bridge"
exclude = ["external/", "target/", "tests/sockets/"]

[features]
# No-op feature kept for backwards Cargo compatibility.
# Downstream crates that had `features = ["sim-log"]` won't get a Cargo error,
# but should migrate to passing `LogOutput::Stream` to spawn_zephyr_rpc_server_with_socat.
sim-log = []

[dev-dependencies]
tempfile = "3" # using tempfile crate to make cleanup of log files easier.

[lib]
name = "babble_bridge"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"
